cmake_minimum_required(VERSION 3.17)
project(intento_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(intento_1_1 main.cpp)
add_executable(intento_1_2 node.h)
add_executable(intento_1_3 spatial_object.h)
add_executable(intento_1_4 node_bucket.h)
add_executable(intento_1_5 node_directory.h)
add_executable(intento_1_6 distance_cal.h)
add_executable(intento_1_7 lsdh_tree.h)
add_executable(intento_1_8 input.h)
